--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Christian life'
 - !lcsh 'Boys -- Conduct of life'
 - !lcc 'BJ'
+- GITenberg
 title: 'Boys: their Work and Influence'
 url: http://www.gutenberg.org/ebooks/23230
